# histfitter

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  ChangeLog  Dockerfile  Doxyfile  LICENSE  README  README.md  dev-requirements.txt  doxypy.py  histfitter.sh  histfitter_env_setup.sh  histfitter_env_setup.sh.in  histfitter_setup_workdir.sh  py_filter.sh  requirements.txt  setup.fish  setup.sh  setup.sh.in  setup5.sh  setup_afs.sh  setup_histfitter.sh  setup_lcg.sh  setup_pytest.sh  setupeos.sh  todo
.github/workflows/: docker.yml
HistFitter-00-00-13/: ChangeLog
HistFitter-00-00-13/config/: HistFactorySchema.dtd
HistFitter-00-00-13/macros/: AtlasStyle.C  AtlasStyle.h  README
HistFitter-00-00-13/python/: 2lepSusyFitterConfig_combined_global_allsys.py  BJet_Config_NewRec.py  MyUserAnalysis_ShapeFactor.py  SystematicsUtils.py  discovery_MyOneLeptonKtScaleFit.py  generateToys.py  prepareHistos.py  stripHisto.py  systematic.py
HistFitter-00-00-13/src/: CombinationUtils.cxx  CombinationUtils.h  CombineWorkSpaces.cxx  DrawUtils.cxx  FitConfig.cxx  HypoTestTool.h  LimitResult.h  LinkDef.h  RooExpandedFitResult.cxx  RooExpandedFitResult.h  RooHist.h  RooPlot.h  SigmaLR.h  Significance.h  StatTools.h  TEasyFormula.cxx  Utils.cxx  ValidationUtils.cxx  XtraValues.cxx  profile_get_Pvalue.cxx  profile_get_Pvalue.h  toy_utils.cxx
analysis/batchjobs/: HypoTest.py  README  merge_hypotests.py  runLimitCalculation.sh  runSusyLimitBatch2.sh  runSusyLimitBatch3.sh  runWorkspaceGeneration.sh  submitLimitCalculation.py  submitWorkspaceGeneration.py  submit_susy.sh  submit_susy_main.sh  submit_susy_main_tree.sh  susy_points3.txt  susy_points4.txt
analysis/configexamples/: MyConfigExampleMCStat.py  MyOneBinExample.py  MySimpleChannelConfig.py
analysis/simplechannel/: README  makeCountingExperiment.C  makeHistograms.C
analysis/tutorial/: MyABCDExample.py  MyConfigExample.py  MyConfigExampleMCStat.py  MyOneBinExample.py  MyOneBinExample_xrootd.py  MyOneBinExample_xrootd_histocache.py  MyOneBinExample_xrootd_tree.py  MyShapeFitExample.py  MySimpleChannelConfig.py  MySystTableConfig.py  MyUpperLimitAnalysis_SS.py  README  (+3 more)
config/: HistFactorySchema.dtd
data/: MySimpleChannelAnalysis.root
doc/: README
docs/: 20120913_HFSurveyFeedback.rtf  20121002_HistFitter_SurveyFeedback.txt  20121112_openissues  HistFitter_tutorial_todo.txt  Python-License.txt  todo  todo_040714.txt  tutorial_furtheroptions.txt  tutorial_hypothesistest.txt  tutorial_systematics.txt  tutorial_upperlimits.txt  tutorial_visualizingsystematics.txt
example/: MyUserAnalysis.py  SimpleExample.py
python/: 2lepSusyFitterConfig.py  BJet_Config.py  CombinedKFactorFit_5Channel.py  CombinedKFactorFit_5Channel_JESComponents.py  CombinedKFactorFit_5Channel_JESComponents_SHORT.py  CombinedKFactorFit_5Channel_Paper.py  KFactorConfig.py  MyConfigExample.py  MyConfigExampleMCStat.py  MyFitForSUSY2012.py  MyOneBinExample.py  MyOneLeptonExample8.py  MyOneLeptonFit.py  MyOneLeptonKFactorFit.py  MyOneLeptonKFactorFit_ShapeSys.py  MyOneLeptonKtScaleFit.py  MyOneLeptonKtScaleFit_ShapeSys.py  MyOneLeptonKtScaleFit_Syst.py  MyOneLeptonKtScaleFit_debug2.py  MyOneLeptonKtScaleFit_mergerSoftLep.py  MyOneLeptonKtScaleFit_noSys.py  MyOneLeptonKtScaleFit_onepoint.py  MyShapeFitExample.py  MySimpleChannelConfig.py  MySoftOneLeptonKtScaleFit.py  MySoftOneLeptonKtScaleFitEl.py  MySoftOneLeptonKtScaleFitMeff.py  MySoftOneLeptonKtScaleFitMetMeff.py  MySoftOneLeptonKtScaleFitMu.py  MySoftOneLeptonKtScaleFit_noSys.py  MyUpperLimitAnalysis_SS.py  MyUserAnalysis.py  MyUserAnalysis_ShapeFactor.py  README  SystLoopmapExample.py  SystematicsUtils.py  WptKFactorFit_5Channel.py  argparse.py  channel.py  channelxml.py  (+27 more)
results/: MySimpleChannelAnalysisOutput_fixSigXSecDown_hypotest.root  MySimpleChannelAnalysisOutput_fixSigXSecNominal_hypotest.root  MySimpleChannelAnalysisOutput_fixSigXSecUp_hypotest.root
scripts/: GenerateJSONOutput.py  GenerateTreeDescriptionFromJSON.py  HistFitter.py  HypoTest.py  PrintFitResult.py  PrintFitResultTex.py  README  README_TABLESCRIPTS  SusyFitter.py  SysTable.py  SysTableTex.py  SystRankingPlot.py  SystRankingPlotMP.py  UpperLimitTable.py  UpperLimitTableTex.py  YieldsTable.py  YieldsTableTex.py  combinews.py  constraints.json  contourPlotter.py  getFinalFullJER.py  harvestHepdataToContours.py  harvestToContours.py  intersection.py  mergeSysTableBreakdown.py  multiplexContours.py  multiplexJSON.py  plotSyst.C  plotUpDown.C  plotUpDown.py  pull_maker.py  pyhf_test_script.py  runSusyLimitBatch1a.sh  runSusyLimitBatch1b.sh
src/: .asetup.save  CMakeLists.txt  ChannelStyle.cxx  ChannelStyle.h  CombinationUtils.cxx  CombinationUtils.h  CombineWorkSpaces.cxx  CombineWorkSpaces.h  ConfigMgr.cxx  ConfigMgr.h  DrawUtils.cxx  DrawUtils.h  ExpandedRooFitResult.cxx  ExpandedRooFitResult.h  FitConfig.cxx  FitConfig.h  Heaviside.cxx  Heaviside.h  HistogramPlotter.cxx  HistogramPlotter.h  HypoTestTool.cxx  HypoTestTool.h  LimitResult.cxx  LimitResult.h  LinkDef.h  Makefile  Makefile.arch  RooExpandedFitResult.cxx  RooExpandedFitResult.h  RooHist.cxx  RooHist.h  RooPlot.cxx  RooPlot.h  SRootFinder.cxx  SRootFinder.h  SigmaLR.cxx  Significance.cxx  Significance.h  StatTools.cxx  StatTools.h  (+18 more)
src/hf/: ChannelStyle.cxx  ChannelStyle.h  CombinationUtils.cxx  CombineWorkSpaces.cxx  CombineWorkSpaces.h  ConfigMgr.cxx  ConfigMgr.h  DrawUtils.cxx  FitConfig.cxx  FitConfig.h  HistogramPlotter.cxx  HistogramPlotter.h  HypoTestTool.cxx  HypoTestTool.h  LimitResult.cxx  LimitResult.h  RooExpandedFitResult.cxx  RooHist.h  Significance.cxx  Significance.h  StatTools.cxx  StatTools.h  TEasyFormula.cxx  TEasyFormula.h  TMsgLogger.cxx  Utils.cxx  Utils.h  ValidationUtils.cxx  ValidationUtils.h  XtraValues.cxx  XtraValues.h  json.cxx  json.h  toy_utils.cxx  toy_utils.h
src/root/: HypoTestTool.cxx  HypoTestTool.h  LinkDef.h  RooExpandedFitResult.cxx  RooHist.cxx  RooHist.h  RooPlot.cxx  RooPlot.h  StatTools.cxx  StatTools.h
test/: conftest.py  test_fullchain.py  test_prepareHistos.py  test_pyhf.py  test_scripts.py  test_tutorial.py
(+128 files in other folders)
